# user_part

./: .env.example  pyproject.toml
app/: forms.py  models.py  serializers.py  urls.py  views.py
app/migrations/: 0001_initial.py
app/templates/app/: login.html  registration.html
project/: settings.py  urls.py
